[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { version = "*", path = "../crates/application", features = ["single", "multi", "rpc_transport"]}
components = { version = "*", path = "../crates/components" }

serde = "*"
slog = "*"

[[bin]]
name = "single"

[[bin]]
name = "multi"
