[package]
name = "protos"
version = "0.1.0"
authors = ["Xun <machine90831@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
serde = { version =  "1.0", features = ["derive"] }
vendor = { git = "https://github.com/Machine90/yu-toolkits.git", branch = "master" }
torrent = { git = "https://github.com/Machine90/yu-toolkits.git", branch = "master" }

[build-dependencies]
# keep this version, which contained a pre-compiled `protoc`.
prost-build = "0.9"